problem with overflow fixed

--- a/css/styletest.css
+++ b/css/styletest.css
@@ -28,9 +28,7 @@ h4,
 ul,
 li,
 progress,
-.col-xs-12,
-.hight20 .row,
-.wrapper-header .row {
+.col-xs-12, .hight20 .row, .wrapper-header .row {
     margin: 0px;
     padding: 0px;
 }
@@ -165,7 +163,7 @@ header {
 /******************************* Footer index.html ************************************/
 
 .hight20 {
-    margin: 0px;
+    margin:0px;
     padding: 0px;
     border: 0px;
     height: 20%;
@@ -193,13 +191,17 @@ header {
     z-index: 3;
 }
 
-
-.hight20 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
+.hight20{
+ display: flex;
+   flex-direction: column;
+  justify-content: center;
+    
 }
+
+.hight20 .enter{
+ 
+}
+
 
 .hight20 p {
     text-align: center;
@@ -296,8 +298,6 @@ header {
 
 .bg-nav {
     min-height: 90px;
-    padding-right: 0px;
-    padding-left: 0px;
 }
 
 .navbar-default {
@@ -561,8 +561,7 @@ nav ul li {
     padding-bottom: 15px;
 }
 
-dt,
-dd {
+dt, dd{
     margin-bottom: 3px;
 }
 
@@ -570,7 +569,6 @@ dd {
 
 
 /***** this media querie is used to avoid the <dd> to wrap under the <dt> in screens smallers than 768px ****/
-
 @media (min-width: 310px) {
     .dl-horizontal dt {
         float: left;
@@ -830,7 +828,7 @@ dd {
     margin: 0 auto;
     padding-left: 60px;
     border-left: 2px solid black;
-    margin-top: 25px;
+   margin-top: 25px;
 
 }
 
@@ -949,11 +947,11 @@ dd {
 
 .album :hover {
     -webkit-animation: rotate 2s infinite linear;
-    -moz-animation: rotate 2s infinite linear;
-    -o-animation: rotate 2s infinite linear;
-    -ms-animation: rotate 2s infinite linear;
-    animation: rotate 2s infinite linear;
-}
+	-moz-animation: rotate 2s infinite linear;
+	-o-animation: rotate 2s infinite linear;
+	-ms-animation: rotate 2s infinite linear;
+	animation: rotate 2s infinite linear; 
+ }
 
 
 
@@ -986,9 +984,10 @@ dd {
 
 
 .audio-mp3 {
-    display: flex;
-    justify-content: center;
-    align-items: center
+  display: flex;
+  justify-content: center;
+  align-items: center 
+    
 }
 
 
@@ -1245,7 +1244,7 @@ blockquote p:last-child {
         padding: 0px 50px 90px 50px;
     }
 
-
+   
 }
 
 
